# programmirovanie-korporativnie-system-project

./: CMakeLists.txt  README.md
include/: Task.h  TaskFactory.h  TrackerManager.h
src/: TaskFactory.cpp  TrackerManager.cpp  main.cpp
tests/: scenario_errors.cpp  scenario_sequence.cpp  scenario_success.cpp  test_main.cpp
